--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to the <b>Install Session </b>database!</h1>
+    <h1>Welcome to the <strong>App Installer</strong> database!</h1>
 </body>
 </html>
